:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/vars.less
+++ b/.vitepress/theme/styles/vars.less
@@ -3,7 +3,7 @@
  * -------------------------------------------------------------------------- */
 
 @app-font-family:
-  'JetBrains Maple Mono', JetBrainsMapleMono,
+  MapleMono, 'JetBrains Maple Mono', JetBrainsMapleMono,
   PingFangSC,
   AlibabaPuHuiTi,
   JetBrainsMono,
