--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -33,7 +33,7 @@ body {
   font-size-adjust: @app-font-size-adjust;
   font-display: swap;
   overscroll-behavior: none; /* 禁用弹性滚动效果 */
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 #app {
