:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/ext.less
+++ b/.vitepress/theme/styles/ext.less
@@ -197,3 +197,17 @@
   color: #aaa;
   font-style: italic;
 }
+
+.char-circle {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    line-height: 14px;
+    font-size: 12px;
+    padding: 1px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+    vertical-align: text-top;
+    font-weight: bold;
+}
