--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -1,11 +1,11 @@
 @import "./fonts/index.less";
 
-// @import "./blur.less";
-// @import "./global.less";
-// @import "./vp-code-group.less";
-// @import "./ext.less";
-// @import "./mermaid.less";
-// @import "./rainbow.less";
+@import "./global.less";
+@import "./ext.less";
+@import "./blur.less";
+@import "./vp-code-group.less";
+@import "./mermaid.less";
+@import "./rainbow.less";
 
 :root {
   --vp-nav-bg-color: transparent;
