:sparkles: feat: 优化样式架构

--- a/.vitepress/theme/styles/mermaid.ext.less
+++ b/.vitepress/theme/styles/mermaid.ext.less
@@ -1,3 +1,9 @@
+.mermaid-graph {
+  background-image: url("/images/mermaid-background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .zenuml,
 .styled-mermaid {
   font-family: LikeJianJianTi, "PING FANG CHANG AN", JetBrainsMapleMono !important;
