--- a/.vitepress/theme/styles/vitepress.code.less
+++ b/.vitepress/theme/styles/vitepress.code.less
@@ -1,4 +1,3 @@
-/* .vitepress\theme\style\vp-code-group.css */
 
 .vp-code-group {
   margin: 0;
@@ -47,4 +46,9 @@
 .named-fence-filename{
   left:32px !important;
   font-weight: normal !important;
+}
+
+.vp-doc div[class*="language-"],
+.vp-block {
+  border-radius: 8px;
 }
