--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -5,3 +5,12 @@
 .blog-index-page {
   background-color: var(--clr);
 } */
+
+.task-list-item {
+  list-style-type: none;
+}
+
+.task-list-item input[type="checkbox"] {
+  margin: 0 0.2em 0.25em -1.4em;
+  vertical-align: middle;
+}
