--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -1,583 +1,7 @@
+@import './vars.less';
+@import './vitepress.ext.less';
+@import './vitepress.print.less';
+@import './vitepress.code.less';
+@import './markdown.ext.less';
+@import './mermaid.ext.less';
 @import "./fonts/index.less";
-
-@import "./global.less";
-@import "./ext.less";
-@import "./blur.less";
-@import "./vp-code-group.less";
-@import "./mermaid.less";
-@import "./rainbow.less";
-
-:root {
-  --vp-nav-bg-color: transparent;
-  --vp-font-family-base: @app-font-family;
-  --vp-font-family-mono: @app-font-family;
-  --vp-header-anchor-symbol: "🔗";
-  /* 建立CSS变量与Mermaid的映射 */
-  --zenuml-primary: var(--mermaid-zenumlPrimary, #4caf50);
-  --zenuml-bg: var(--mermaid-zenumlBg, #fafafa);
-}
-
-/* 组件样式继承 */
-.zenuml-diagram {
-  background: var(--zenuml-bg);
-  border: 1px solid var(--zenuml-primary);
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: @app-font-family;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: @app-font-weight;
-  font-size-adjust: @app-font-size-adjust;
-  font-display: swap;
-  overscroll-behavior: none; /* 禁用弹性滚动效果 */
-  // overflow-x: hidden;
-}
-
-#app {
-  font-family: @app-font-family;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: @app-font-weight;
-  font-size-adjust: @app-font-size-adjust;
-  font-display: swap;
-
-  :deep(*) {
-    font-family: @app-font-family;
-    font-weight: @app-font-weight;
-    font-size-adjust: @app-font-size-adjust;
-  }
-}
-
-// .index-page-class {
-//   body {
-//     cursor: none;
-//     background-color: #fff;
-//   }
-
-//   .VPButton.brand {
-//     position: relative;
-//     transition: all 0.3s;
-//   }
-//   .VPButton.brand::before,
-//   .VPButton.brand::after {
-//     content: "";
-//     position: absolute;
-//     top: -5px;
-//     left: -5px;
-//     right: -5px;
-//     bottom: -5px;
-//     border: 2px solid var(--vp-c-brand-light);
-//     transition: all 0.5s;
-//     border-radius: 20px;
-//     animation: clippath 3s infinite linear;
-//   }
-//   .VPButton.brand::after {
-//     animation: clippath 3s infinite -1.5s linear;
-//   }
-//   @keyframes clippath {
-//     0%,
-//     100% {
-//       clip-path: inset(0 0 98% 0);
-//     }
-//     25% {
-//       clip-path: inset(0 98% 0 0);
-//     }
-//     50% {
-//       clip-path: inset(98% 0 0 0);
-//     }
-//     75% {
-//       clip-path: inset(0 0 0 98%);
-//     }
-//   }
-
-//   .acctions {
-//     gap: 30px;
-//   }
-
-//   .action:last-child {
-//     position: relative;
-//     overflow: hidden;
-//     border-radius: 20px;
-
-//     .VPButton.alt:hover::before {
-//       content: "";
-//       position: absolute;
-//       left: -50%;
-//       top: -50%;
-//       width: 200%;
-//       height: 200%;
-//       border-radius: 10px;
-//       background-image: conic-gradient(
-//         transparent,
-//         var(--vp-c-brand),
-//         transparent 30%
-//       );
-//       z-index: 20;
-//       animation: rotation 4s linear infinite;
-//     }
-
-//     .VPButton.alt:hover::after {
-//       content: "";
-//       position: absolute;
-//       --g: 4px;
-//       width: calc(100% - var(--g) * 2);
-//       height: calc(100% - var(--g) * 2);
-//       // background: #000;
-//       left: var(--g);
-//       top: var(--g);
-//       border-radius: inherit;
-//       z-index: 20;
-//       opacity: 0.9;
-//     }
-//   }
-
-//   @keyframes rotation {
-//     to {
-//       transform: rotate(360deg);
-//     }
-//   }
-// }
-
-// .blog-index-page {
-//   // background-color: var(--clr);
-//   background-color: inherit;
-
-//   .vp-doc {
-//     background: red;
-//   }
-// }
-
-.medium-zoom-overlay {
-  backdrop-filter: blur(5rem);
-  filter: blur(3px);
-  opacity: 0.9 !important;
-  z-index: 9;
-}
-
-.medium-zoom-overlay::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--vp-c-bg-alt);
-  backdrop-filter: blur(10px);
-  opacity: 0.8;
-}
-
-.medium-zoom-image {
-  z-index: 10;
-}
-
-.medium-zoom-overlay,
-.medium-zoom-image--opened {
-  z-index: 999;
-}
-
-.medium-zoom--opened {
-  padding: 1em;
-}
-
-.medium-zoom-image--opened {
-  border-radius: 0.3em;
-  box-shadow:
-    0 0 0 1px hsla(0, 0%, 100%, 0.3) inset,
-    0 0.5em 1em rgba(0, 0, 0, 0.6);
-  text-shadow: 0 1px 1px hsla(0, 0%, 100%, 0.3);
-  // background: hsla(0, 0%, 100%, 0.3);
-}
-
-.DocSearch-Button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  width: 32px;
-  height: 32px;
-  border-radius: 4px;
-  background: transparent;
-  transition: border-color 0.25s;
-}
-@media (min-width: 768px) {
-  .DocSearch-Button {
-    justify-content: flex-start;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    padding: 0 10px 0 12px;
-    width: 100%;
-    height: 40px;
-    background-color: var(--vp-c-bg-alt);
-  }
-}
-@media (max-width: 768px) {
-  .DocSearch-Button-Keys {
-    display: none;
-  }
-  .VPNavBarHamburger {
-    height: 32px !important;
-    width: 32px !important;
-    border-radius: 4px;
-  }
-}
-.DocSearch-Button:hover {
-  background-color: var(--vp-c-bg-alt);
-}
-
-.VPNavBar {
-  background-color: var(--vp-c-bg);
-}
-
-mjx-container {
-  display: inline-block;
-  margin: auto 2px -2px;
-}
-
-mjx-container > svg {
-  margin: auto;
-  display: inline-block;
-}
-
-html[data-theme="dark"] {
-  .VPNavBar:not(.top) {
-    // background-color: var(--vp-nav-bg-color);
-    background-color: var(--vp-c-bg);
-  }
-}
-
-
-.VPNav,
-.VPLocalNav {
-  position: relative;
-  // background: var(--vp-nav-bg-color) !important;
-}
-
-.VPNav::after,
-.VPLocalNav::after,
-.VPLocalNav.reached-top::after {
-  position: absolute;
-  content: "";
-  top: -1px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  backdrop-filter: saturate(180%) blur(12px);
-  z-index: -1;
-}
-
-.VPNavBar,
-.VPLocalNav.reached-top {
-  border-bottom: none;
-}
-
-.VPNavBar.screen-open {
-  background: var(--vp-c-bg) !important;
-}
-
-.VPNavBarTitle .title span {
-  margin: 0;
-  -webkit-text-stroke: 3px #9747ff;
-  paint-order: stroke;
-}
-
-.VPSocialLinks.VPNavBarSocialLinks.social-links {
-  margin-right: 0;
-}
-
-// .gallery-page-class,
-// .blog-page-class,
-// .manual-page-class,
-// .manuals-page-class {
-//   [data-animate] {
-//     --stagger: 0;
-//     --delay: 120ms;
-//     --start: 0ms;
-//   }
-
-//   @media (prefers-reduced-motion: no-preference) {
-//     [data-animate] {
-//       animation: enter 0.6s both;
-//       animation-delay: calc(var(--stagger) * var(--delay) + var(--start));
-//     }
-//   }
-
-//   @keyframes slide-enter {
-//     0% {
-//       opacity: 0;
-//       transform: translateY(10px);
-//     }
-
-//     to {
-//       opacity: 1;
-//       transform: none;
-//     }
-//   }
-
-//   .vp-doc > div > * {
-//     --stagger: 0;
-//     --delay: 150ms;
-//     --start: 0ms;
-//     animation: slide-enter 1s both 1;
-//     animation-delay: calc(var(--start) + var(--stagger) * var(--delay));
-//   }
-
-//   .vp-doc > div > *:nth-child(1) {
-//     --stagger: 1;
-//   }
-//   .vp-doc > div > *:nth-child(2) {
-//     --stagger: 2;
-//   }
-//   .vp-doc > div > *:nth-child(3) {
-//     --stagger: 3;
-//   }
-//   .vp-doc > div > *:nth-child(4) {
-//     --stagger: 4;
-//   }
-//   .vp-doc > div > *:nth-child(5) {
-//     --stagger: 5;
-//   }
-//   .vp-doc > div > *:nth-child(6) {
-//     --stagger: 6;
-//   }
-//   .vp-doc > div > *:nth-child(7) {
-//     --stagger: 7;
-//   }
-//   .vp-doc > div > *:nth-child(8) {
-//     --stagger: 8;
-//   }
-//   .vp-doc > div > *:nth-child(9) {
-//     --stagger: 9;
-//   }
-//   .vp-doc > div > *:nth-child(10) {
-//     --stagger: 10;
-//   }
-//   .vp-doc > div > *:nth-child(11) {
-//     --stagger: 11;
-//   }
-//   .vp-doc > div > *:nth-child(12) {
-//     --stagger: 12;
-//   }
-//   .vp-doc > div > *:nth-child(13) {
-//     --stagger: 13;
-//   }
-//   .vp-doc > div > *:nth-child(14) {
-//     --stagger: 14;
-//   }
-//   .vp-doc > div > *:nth-child(15) {
-//     --stagger: 15;
-//   }
-//   .vp-doc > div > *:nth-child(16) {
-//     --stagger: 16;
-//   }
-//   .vp-doc > div > *:nth-child(17) {
-//     --stagger: 17;
-//   }
-//   .vp-doc > div > *:nth-child(18) {
-//     --stagger: 18;
-//   }
-//   .vp-doc > div > *:nth-child(19) {
-//     --stagger: 19;
-//   }
-//   .vp-doc > div > *:nth-child(20) {
-//     --stagger: 20;
-//   }
-
-//   .vp-doc strong {
-//     color: var(--vp-c-brand-light);
-//     background: initial;
-//   }
-//   .vp-doc strong:before {
-//     content: "「";
-//   }
-//   .vp-doc strong:after {
-//     content: "」";
-//   }
-//   .text-bold,
-//   b,
-//   strong {
-//     font-weight: 700;
-//   }
-// }
-
-// .manual-page-class {
-//   width: 100vw;
-// }
-
-// .manuals-page-class {
-//   .VPHomeFeatures {
-//     margin-top: 30px;
-//   }
-// }
-
-// .manual-index-page {
-//   background: transparent;
-// }
-
-.text-emphasis-fire {
-  text-emphasis: "🔥";
-}
-
-// .VPNavBarMenuLink {
-//   display: inline-block;
-//   position: relative;
-//   padding: 3px 6px;
-//   cursor: pointer;
-// }
-// .VPNavBarMenuLink::before,
-// .VPNavBarMenuLink::after {
-//   content: "";
-//   position: absolute;
-//   width: 10px;
-//   height: 10px;
-//   opacity: 0;
-//   transition: all 0.6s ease;
-// }
-// .VPNavBarMenuLink::before {
-//   bottom: 25%;
-//   left: 10%;
-//   transform: translate(100%, -50%);
-//   border-left: 2px solid #000;
-//   border-bottom: 2px solid #000;
-// }
-// .VPNavBarMenuLink::after {
-//   right: 10%;
-//   top: 25%;
-//   transform: translate(-100%, 50%);
-//   border-top: 2px solid #000;
-//   border-right: 2px solid #000;
-// }
-// .VPNavBarMenuLink:hover::before,
-// .VPNavBarMenuLink:hover::after {
-//   transform: translate(0, 0);
-//   opacity: 1;
-// }
-
-.vp-doc div[class*="language-"],
-.vp-block {
-  border-radius: 8px;
-}
-
-// @view-transition {
-//   navigation: auto;
-// }
-
-/* 创建自定义动画 */
-@keyframes move-out {
-  from {
-    transform: translateX(0%);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes move-in {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
-
-/* 给新旧快照应用动画效果 */
-::view-transition-old(root) {
-  animation: 0.4s ease-in both move-out;
-}
-
-::view-transition-new(root) {
-  animation: 0.4s ease-in both move-in;
-}
-/*markdown*/
-// .vp-doc h1,
-// .vp-doc h2,
-// .vp-doc h3,
-// .vp-doc h4,
-// .vp-doc h5,
-// .vp-doc h6 {
-//   line-height: 1.5;
-//   margin-top: 15px;
-//   margin-bottom: 10px;
-//   padding-bottom: 5px;
-// }
-
-// .vp-doc h2 {
-//   display: inline-block;
-//   font-weight: 700;
-//   background: var(--c-brand);
-//   color: #fff;
-//   padding: 6px 8px 0 0;
-//   border-top-right-radius: 6px;
-//   margin-right: 2px;
-//   box-shadow: 6px 3px 0 0 var(--c-brand-light);
-// }
-
-// .vp-doc h2::before {
-//   content: " ";
-//   display: inline-block;
-//   width: 8px;
-// }
-
-// .vp-doc h2::after {
-//   content: " ";
-//   position: absolute;
-//   display: block;
-//   width: calc(100% - 50px);
-//   border-bottom: 3px solid var(--c-brand);
-// }
-/*markdown*/
-
-:fullscreen,
-::backdrop {
-  background-color: var(--vp-c-bg);
-}
-
-:-webkit-full-screen {
-  background-color: var(--vp-c-bg);
-}
-:-moz-full-screen {
-  background-color: var(--vp-c-bg);
-}
-
-:-ms-fullscreen {
-  background-color: var(--vp-c-bg);
-}
-:fullscreen {
-  background-color: var(--vp-c-bg);
-}
-
-.mermaid-graph {
-  background-image: url("/images/mermaid-background.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-:root {
-  --vp-code-copy-copied-text-content: "Copied";
-}
-
-:lang(zh-CN) {
-  --vp-code-copy-copied-text-content: "已复制";
-}
-
-a.VPSkipLink {
-  content: "转至正文";
-}
-a.VPSkipLink::after {
-  content: "转至正文";
-}
-
-.vp-doc .header-anchor::before {
-  display: none;
-}
-
-.nprogress .bar {
-  background: var(--vp-c-brand-light) !important;
-}
