:sparkles: feat: 优化

--- a/.vitepress/theme/styles/Mermaid.css
+++ b/.vitepress/theme/styles/Mermaid.css
@@ -32,3 +32,10 @@
   font-weight: 500;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "FangYuan";
+  src: url('/fonts/fanyuan.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
