--- a/.vitepress/theme/styles/vitepress.ext.less
+++ b/.vitepress/theme/styles/vitepress.ext.less
@@ -2,7 +2,7 @@
   --vp-nav-bg-color: transparent;
   --vp-font-family-base: @app-font-family;
   --vp-font-family-mono: @app-font-family;
-  --vp-header-anchor-symbol: "🔗";
+  // --vp-header-anchor-symbol: "🔗";
   /* 建立CSS变量与Mermaid的映射 */
   --zenuml-primary: var(--mermaid-zenumlPrimary, #4caf50);
   --zenuml-bg: var(--mermaid-zenumlBg, #fafafa);
