:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/vitepress.ext.less
+++ b/.vitepress/theme/styles/vitepress.ext.less
@@ -380,15 +380,15 @@ a.VPSkipLink::after {
     font-weight: 700;
   }
 
-  .vp-doc::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to right, rgba(255,255,255,1), rgba(255,255,255,0));
-  }
+  // .vp-doc::before {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   background: linear-gradient(to right, rgba(255,255,255,1), rgba(255,255,255,0));
+  // }
 }
 
 :root {
