:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/vitepress.print.less
+++ b/.vitepress/theme/styles/vitepress.print.less
@@ -33,4 +33,20 @@
   h2 {
     page-break-before: always;
   }
+
+  .VPDocFooter > .like-dislike-container {
+    display: none;
+  }
+
+  #PGFT > span {
+    display: none;
+  }
+
+  #VSTPL span[class$="-text"] {
+    display: none;
+  }
+
+  .VPFooter > .container > .message {
+    display: none;
+  }
 }
