--- a/.vitepress/theme/styles/index.less
+++ b/.vitepress/theme/styles/index.less
@@ -3,7 +3,7 @@
 @import "./vitepress.code.less";
 @import "./markdown.ext.less";
 @import "./mermaid.ext.less";
-@import "./fonts/index.less";
+@import "./fonts/JetBrainsMapleMono.less";
 
 /* 滚动条里面轨道，能向上向下移动 */
 ::-webkit-scrollbar-track-piece {
